<resources>
    <string name="app_name">INCAR</string>
    <string name="navigation_drawer_open" translatable="false">Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Drawer Closed</string>
    <string name="password">password</string>
    <string name="id">id</string>
    <string name="incar_login">INCAR Login</string>
    <string name="find_id_and_password">Find ID/Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="vision">Make commuting to school easier and more enjoyable</string>
    <string name="select_starting_point">Select your starting point</string>
    <string name="select_destination">Select your destination</string>
    <string name="select_options">Select Options</string>
    <string name="select_job">Select your job</string>
    <string name="student">Inha University Student</string>
    <string name="professor">Inha University Professor</string>
    <string name="faculty">Inha University Faculty</string>
    <string name="choose">Choose</string>
    <string name="enter_login_info">Enter Login Information</string>
    <string name="confirm_password">Comfirm Password</string>
    <string name="email">e-mail</string>
    <string name="enter_personal_info">Enter your personal information</string>
    <string name="real_name">name(real name)</string>
    <string name="department">Department</string>
    <string name="introduction">Introduction</string>
    <string name="agreement_for_terms">I agree to all of INCAR\'s consolidated terms.</string>
    <string name="view_terms">View Terms</string>
    <string name="provision1">인카 통합약관에 모두 동의합니다.</string>
    <string name="provision2">인카 통합서비스이용약관 동의(필수)</string>
    <string name="provision3">인카 통합개인정보처리방침 동의(필수)</string>
    <string name="provision4">인카 통합커뮤니티이용규칙 확인(필수)</string>
    <string name="provision">약관보기</string>
    <string name="provision0">약관</string>
    <string name="carpoolregister_title">카풀 등록하기</string>
    <string name="carpoolregister_type_type">유형</string>
    <string name="carpoolregister_type_purpose">목적</string>
    <string name="carpoolregister_type_stopover">경유지</string>
    <string name="carpoolregister_type_departure">출발지</string>
    <string name="carpoolregister_type_destination">도착지</string>
    <string name="carpoolregister_type_next">다음</string>
    <string name="carpoolregister_content_frequency">카풀 빈도</string>
    <string name="carpoolregister_content_time">출발 일시</string>
    <string name="carpoolregister_content_people">인원</string>
    <string name="carpoolregister_content_cost">금액</string>
    <string name="carpoolregister_content_notice">* 정기카풀은 예약이 완료될 때까지 노출됩니다.</string>
    <string name="carpoolregister_content_costunit">원/인당</string>
    <string name="carpoolregister_content_costnotice1">* 1인당 이용금액을 입력해주세요.</string>
    <string name="carpoolregister_content_costnotice2">* 정기카풀의 경우, 1회 이용금액을 입력해주세요.</string>
    <string name="carpoolregister_content_timenotice">출발날짜와 시간을 선택해주세요.</string>
    <string name="carpoolregister_content_peopleonotice">카풀을 이용할 인원을 선택해주세요.</string>
    <string name="carpoolregister_constraint_insurance">대인배상</string>
    <string name="carpoolregister_constraint_smoking">차내 흡연여부</string>
    <string name="carpoolregister_constraint_woman">여성제한</string>
    <string name="carpoolregister_constraint_more">추가내용</string>
    <string name="carpoolregister_constraint_womannotice">* 체크시 해당 카풀은 여성에게만 보입니다.</string>
    <string name="carpoolregister_constraint_morenotice">카풀 이용시, 추가적으로 요청할 내용을 입력해주세요.</string>
    <string name="carpoolregister_constraint_onlywoman">여성전용</string>
    <string name="carpoolregister_constraint_insuranceyes">가입</string>
    <string name="carpoolregister_constraint_insuranceno">미가입</string>
    <string name="carpoolregister_constraint_insuranceyesno">모름</string>
    <string name="carpoolregister_register">등록</string>
    <string name="carpoolregister_cartype">차종</string>
    <string name="carpoolregister_cartypenotice">*예시: 기아 모닝</string>
    <string name="received_request">Received Request</string>
    <string name="sent_request">Sent Request</string>
    <string name="assessment">Assessment</string>
    <string name="posted_writing">Posted Writing</string>
    <string name="get_in">Get In</string>
    <string name="give_me_a_ride">Give Me a Ride</string>
    <string name="when_time">Time</string>
    <string name="kimname">Kim XX</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="birth">Birth</string>
    <string name="in_provision">In Provision</string>
    <string name="provision_content">Provision Content</string>
    <string name="find_password">Find Password</string>
    <string name="carpoolregister_hotlist">즐겨찾기 불러오기</string>
    <string name="cacaomap_detail_address_choice">상세 주소 선택</string>
    <string name="carpoolregister_choice">선택</string>
    <string name="terms">약관</string>
    <string name="popup_check">확인</string>
    <string name="title">Content</string>
    <string name="email_certification">Email Certification</string>
    <string name="go_login_screen">Go Login Screen</string>
    <string name="password_change">Password Change</string>
    <string name="password_change1">Password Change1</string>
    <string name="password_change_comfirm">Password_Change_Comfirm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pm_request_notice">The request received is automatically deleted after 48 hours of arrival time of the carpool and cannot be evaluated.</string>
    <string name="Message">message</string>
    <string name="club_introduction">Club_Introcution</string>
    <string name="provision_content2">provision_content2</string>
    <string name="provision_content3">provision_content3</string>
</resources>