<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="ac.inhaventureclub.incar.activity.SignUpActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="12"
        tools:context=".activity.SignUpActivity">

        <!-- title section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_signUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sign_up"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_cancel_sign_up"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/icon_cancel"
                android:gravity="right"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- content -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- -->
                <TextView
                    android:id="@+id/tv_login_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/enter_login_info"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <EditText
                        android:id="@+id/et_email_signUp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="6"
                        android:hint="@string/email"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/btn_email_certification"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="2"
                        android:background="@drawable/button_00dbd8"
                        android:text="인증하기"
                        android:textColor="#FFFFFF"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/et_password_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/et_password_confirm_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tv_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <!-- -->
                <TextView
                    android:id="@+id/tv_enter_personal_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/enter_personal_info"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_name_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/real_name"
                    android:inputType="text" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/btn_man"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/man" />

                    <RadioButton
                        android:id="@+id/btn_woman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/woman" />

                </RadioGroup>

                <EditText
                    android:id="@+id/et_birth_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/birth"
                    android:inputType="text" />


                <TextView
                    android:id="@+id/tv_careerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/select_job"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rg_select_job"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/btn_student"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/student"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/btn_professor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/professor" />

                    <RadioButton
                        android:id="@+id/btn_faculty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/faculty" />

                </RadioGroup>

                <EditText
                    android:id="@+id/et_introduction_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/introduction"
                    android:lines="3" />

                <!-- -->
                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/provision0"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <!-- -->
                <Button
                    android:id="@+id/btn_view_terms"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/view_terms" />

                <CheckBox
                    android:id="@+id/cb_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/in_provision" />

                <Button
                    android:id="@+id/btn_certification"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_00dbd8"
                    android:text="@string/sign_up"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
        <!-- content section -->

    </LinearLayout>

</layout>