<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/postManagementTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabPostedWriting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posted_writing" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSentRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sent_request" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabReceivedRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/received_request" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabAssessment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assessment" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/postManagementViewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/postManagementTab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>