<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postingmanagement_constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/postingmanagement_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_editor_absoluteX="0dp"
            app:tabGravity="fill">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/postingmanagement_tab_myposting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posted_writing" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/postingmanagement_tab_myrequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sent_request" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/postingmanagement_tab_otherrequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assessment" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/postingmanagement_tab_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Message" />
        </com.google.android.material.tabs.TabLayout>


        <include
            android:id="@+id/postingmanagement_blank"
            layout="@layout/fragment_postingmanagement_blank"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/postingmanagement_tablayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
</layout>