<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_post_management_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="#A4A4A4"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/프로필사진"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/hamburger_defaultprofile"
                android:contentDescription="@drawable/hamburger_defaultprofile"/>


            <TextView
                android:id="@+id/이름"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kimname" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/출발지"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="출발지 : 우리집" />

            <TextView
                android:id="@+id/도착지"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/carpoolregister_type_destination" />

            <LinearLayout
                android:id="@+id/when"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/날짜"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/carpoolregister_content_time" />

                <TextView
                    android:id="@+id/시간"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/when_time" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>