<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="activity"
            type="ac.inhaventureclub.incar.activity.FindIdAndPasswordActivity" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="12"
        tools:context=".activity.SignUpActivity">

        <!-- title section -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_find_password_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/password_change"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_cancel_find_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/icon_cancel"
                android:gravity="right"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- content -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"

            android:layout_weight="11">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <!-- -->

                <EditText
                    android:id="@+id/et_show_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:layout_marginStart="10dp"
                    android:hint="@string/password_change1"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/et_show_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textEmailAddress" />


                <Button
                    android:id="@+id/authBtn"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_00dbd8"
                    android:text="@string/password_change"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
        <!-- content section -->

    </LinearLayout>
</layout>